--- a/kolyaski.html
+++ b/kolyaski.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 
-  <!-- <all> -->
-
   <header>
     <div class="container">
       <div class="row">
@@ -83,42 +81,357 @@
                 <div class="info_tovar_img">
                   <img src="img/Коляска.png" alt="Коляска">
                 </div>
-                <!-- <div class="hi"> -->
-                <div class="info_tovar_li1">
-                  <ul>
-                    <li>Тип</li>
-                    <li>Возраст</li>
-                    <li>Механизм складывания</li>
-                    <li>Количество колес</li>
-                    <li>Колеса</li>
-                    <li>Максимальный возраст</li>
-                    <li>Цвет</li>
-                  </ul>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
                 </div>
-                <div class="info_tovar_li3">
-                  <ul>
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-                  </ul>
-                </div>
-                <div class="info_tovar_li2">
-                  <ul>
-                    <li>Прогулочная</li>
-                    <li>Один</li>
-                    <li>Трость</li>
-                    <li>8</li>
-                    <li>Резиновые</li>
-                    <li>3 года</li>
-                    <li>Синий</li>
-                  </ul>
-                </div>
-                <!-- </div> -->
                 <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <div class="lines">
+                  <div class="line">
+                    <div class="line1">Тип</div>
+                    <div class="line2">Прогулочная</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество блоков</div>
+                    <div class="line2">Один</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Механизм складывания</div>
+                    <div class="line2">Трость</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Количество колес</div>
+                    <div class="line2">8</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Колеса</div>
+                    <div class="line2">Резиновые</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Максимальный возраст</div>
+                    <div class="line2">3 года</div>
+                  </div>
+                  <div class="line">
+                    <div class="line1">Цвет</div>
+                    <div class="line2">Синий</div>
+                  </div>
+                  <a href="#" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="info_tovar_price">
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <div class="info_tovar_price_procherk">
+                    15800 грн.
+                  </div>
+                  <div class="info_tovar_price_price">
+                    <a href="#">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -155,6 +468,5 @@
     </div>
   </footer>
 
-  <!-- </all> -->
 </body>
 </html>
