--- a/kolyaski.html
+++ b/kolyaski.html
@@ -66,11 +66,11 @@
 
           <div class="col-lg-12 d-flex justify-content-center align-items-center sort_by">
             <form>
-              <input type="button" name="btn_sort" value="Сортировать"></button>
-              <input type="button" name="btn_popular" value="По популярности"></button>
-              <input type="button" name="btn_price" value="По цене"></button>
-              <input type="button" name="btn_price_and_available" value="По цене и наличию"></button>
-              <input type="button" name="btn_brand" value="По брендам"></button>
+              <input type="button" name="btn_sort" value="Сортировать">
+              <input type="button" name="btn_popular" value="По популярности">
+              <input type="button" name="btn_price" value="По цене">
+              <input type="button" name="btn_price_and_available" value="По цене и наличию">
+              <input type="button" name="btn_brand" value="По брендам">
             </form>
           </div>
 
@@ -436,6 +436,23 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-12 d-flex justify-content-center align-items-center  end">
+            <form>
+              <input type="button"  class="b" name="back" value="Назад">
+              <input type="button"  class="s" name="1" value="1">
+              <input type="button"  class="s" name="2" value="2">
+              <input type="button"  class="s" name="3" value="3">
+              <input type="button"  class="s" name="4"  value="4">
+              <input type="button"  class="s" name="..." value="..."  readonly >
+              <input type="button"  class="s" name="9" value="9">
+              <input type="button"  class="b" name="go" value="Вперед">
+              <input type="button"  class="b b10" name="10" value="по 10">
+              <input type="button"  class="b" name="20" value="по 20">
+              <input type="button"  class="b" name="all" value="все">
+            </form>
+          </div>
+
 
         </div>
         <div class="col-lg-3"></div> <!--боковое меню-->
