--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="cloud">
                 <p>В вашей корзине</p>
                 <p><b>7 товаров на суму 1337 грн.</b></p>
-                <button type="button" class="btn btn-dark btn-sm">оформить</button>
+                <button type="button" class="btn btn-blue btn-sm">оформить</button>
               </div>    <!--Корзина-->
               <div class="brand background_blank for_flex_2">
                 <h4>Список брендов</h4>
