--- a/kolyaski.html
+++ b/kolyaski.html
@@ -6,6 +6,7 @@
   <title>Торговый дом "2 Гуся"</title>
   <link rel="stylesheet" href="fonts/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -455,35 +456,238 @@
 
 
         </div>
-        <div class="col-lg-3"></div> <!--боковое меню-->
-      </div>
+        <div class="col-lg-3">
+          <div class="col-lg-12">
+            <div class="cloud">  <!--Корзина-->
+              <p>В вашей корзине</p>
+              <p><b>7 товаров на суму 1337 грн.</b></p>
+              <button type="button" class="btn btn-blue btn-sm">оформить</button>
+            </div>
+            <div class="blank">
+              <div class="filter">
+                <div class="blank_title">
+                  <p>Цена, руб.</p>
+                </div>
+              </div>
+            </div>
+            <div class="blank">
+              <div class="kind_of">
+                <div class="blank_title">
+                  <p>Виды колясок</p>
+                  <ul>
+                    <li><input type="checkbox" name="option1" value="1" checked>Коляски для новорожденных</li>
+                    <li><input type="checkbox" name="option2" value="2">Прогулочные коляски</li>
+                    <li><input type="checkbox" name="option3" value="3">Коляски трости</li>
+                    <li><input type="checkbox" name="option4" value="4">Универсальные коляски</li>
+                    <li><input type="checkbox" name="option5" value="5">Коляски для двойни</li>
+                    <li><input type="checkbox" name="option6" value="6">Конверты</li>
+                    <li><input type="checkbox" name="option7" value="7">Защита от дождя и солнца</li>
+                    <li><input type="checkbox" name="option8" value="8">Сумки к коляскам</li>
+                    <li><input type="checkbox" name="option9" value="9">Запчасти</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="blank">
+              <div class="brand">
+                <div class="blank_title">
+                  <p>Бренды</p>
+                  <ul>
+                    <li><input type="checkbox" name="option1" value="1">ABC Design</li>
+                    <li><input type="checkbox" name="option2" value="2">Adamex</li>
+                    <li><input type="checkbox" name="option3" value="3">Androx</li>
+                    <li><input type="checkbox" name="option4" value="4">Aneco</li>
+                    <li><input type="checkbox" name="option5" value="5">Anmar</li>
+                    <li><input type="checkbox" name="option6" value="6">Baby car (Беби кар)</li>
+                    <li><input type="checkbox" name="option7" value="7">Britax</li>
+                    <li><input type="checkbox" name="option8" value="8">Capella</li>
+                    <li><input type="checkbox" name="option9" value="9">Chicco</li>
+                    <li><input type="checkbox" name="option10" value="10">Navington</li>
+                    <li><input type="checkbox" name="option11" value="11">Peg Perego (Пег Перего)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="blank">
+              <div class="characteristic">
+                <div class="blank_title">
+                  <p>Характеристики</p>
+                  ul>
+                  <li>
+                    <i class="lol"></i><span>Механизм складывания</span>
+                    <ul class="child">
+                      <li>Трость</li>
+                      <li>Механический</li>
+                      <li>Отсутствует</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Количество колес</span>
+                    <ul class="child">
+                      <li>4</li>
+                      <li>6</li>
+                      <li>8</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Колеса</span>
+                    <ul class="child">
+                      <li>Резиновые</li>
+                      <li>Пластиковые</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Максимальный возраст</span>
+                    <ul class="child">
+                      <li>до 3 лет</li>
+                      <li>до 6 лет</li>
+                      <li>до 12 лет</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Цвет</span>
+                    <ul class="child">
+                      <li>Красный</li>
+                      <li>Зеленый</li>
+                      <li>Синий</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="blank">
+            <div class="catalog">
+              <div class="blank_title">
+                <p>Каталог</p>
+                <ul>
+                  <li>
+                    <i class="lol"></i><span>Коляски</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Мебель и матрасы</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Автокресла</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Развитие</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Зимние товары</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Одежда и обувь для малышей</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Одежда для беременных</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Товары по сниженным ценам</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Гигиена</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Активные игры</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <i class="lol"></i><span>Товары для мам и малышей, электроника</span>
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="reklama">
+            <a href="#">
+              <img src="img/main_reklama.png" alt="main_reklama">
+            </a>
+          </div>
+        </div>
+      </div> <!--боковое меню-->
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="row justify-content-center">
-            <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
-            <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
-            <div class="col-5 col-md-3 foot ">
-              <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
-            </div>
-            <div class="col-5 col-md-3 foot  logo_footer">
-              <div><img src="img/logo_footer.png" alt="logo_footer"></div>
-            </div>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="row justify-content-center">
+          <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+          <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
+          <div class="col-5 col-md-3 foot ">
+            <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
+            <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
+          </div>
+          <div class="col-5 col-md-3 foot  logo_footer">
+            <div><img src="img/logo_footer.png" alt="logo_footer"></div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
 </body>
 </html>
