--- a/kolyaski.html
+++ b/kolyaski.html
@@ -475,15 +475,15 @@
                 <div class="blank_title">
                   <p>Виды колясок</p>
                   <ul>
-                    <li><input type="checkbox" name="option1" value="1" checked>Коляски для новорожденных</li>
-                    <li><input type="checkbox" name="option2" value="2">Прогулочные коляски</li>
-                    <li><input type="checkbox" name="option3" value="3">Коляски трости</li>
-                    <li><input type="checkbox" name="option4" value="4">Универсальные коляски</li>
-                    <li><input type="checkbox" name="option5" value="5">Коляски для двойни</li>
-                    <li><input type="checkbox" name="option6" value="6">Конверты</li>
-                    <li><input type="checkbox" name="option7" value="7">Защита от дождя и солнца</li>
-                    <li><input type="checkbox" name="option8" value="8">Сумки к коляскам</li>
-                    <li><input type="checkbox" name="option9" value="9">Запчасти</li>
+                    <li><input type="checkbox" name="option1" value="1" checked> Коляски для новорожденных</li>
+                    <li><input type="checkbox" name="option2" value="2"> Прогулочные коляски</li>
+                    <li><input type="checkbox" name="option3" value="3"> Коляски трости</li>
+                    <li><input type="checkbox" name="option4" value="4"> Универсальные коляски</li>
+                    <li><input type="checkbox" name="option5" value="5"> Коляски для двойни</li>
+                    <li><input type="checkbox" name="option6" value="6"> Конверты</li>
+                    <li><input type="checkbox" name="option7" value="7"> Защита от дождя и солнца</li>
+                    <li><input type="checkbox" name="option8" value="8"> Сумки к коляскам</li>
+                    <li><input type="checkbox" name="option9" value="9"> Запчасти</li>
                   </ul>
                 </div>
               </div>
@@ -493,17 +493,17 @@
                 <div class="blank_title">
                   <p>Бренды</p>
                   <ul>
-                    <li><input type="checkbox" name="option1" value="1">ABC Design</li>
-                    <li><input type="checkbox" name="option2" value="2">Adamex</li>
-                    <li><input type="checkbox" name="option3" value="3">Androx</li>
-                    <li><input type="checkbox" name="option4" value="4">Aneco</li>
-                    <li><input type="checkbox" name="option5" value="5">Anmar</li>
-                    <li><input type="checkbox" name="option6" value="6">Baby car (Беби кар)</li>
-                    <li><input type="checkbox" name="option7" value="7">Britax</li>
-                    <li><input type="checkbox" name="option8" value="8">Capella</li>
-                    <li><input type="checkbox" name="option9" value="9">Chicco</li>
-                    <li><input type="checkbox" name="option10" value="10">Navington</li>
-                    <li><input type="checkbox" name="option11" value="11">Peg Perego (Пег Перего)</li>
+                    <li><input type="checkbox" name="option1" value="1" checked> ABC Design</li>
+                    <li><input type="checkbox" name="option2" value="2" checked> Adamex</li>
+                    <li><input type="checkbox" name="option3" value="3" checked> Androx</li>
+                    <li><input type="checkbox" name="option4" value="4" checked> Aneco</li>
+                    <li><input type="checkbox" name="option5" value="5" checked> Anmar</li>
+                    <li><input type="checkbox" name="option6" value="6" checked> Baby car (Беби кар)</li>
+                    <li><input type="checkbox" name="option7" value="7" checked> Britax</li>
+                    <li><input type="checkbox" name="option8" value="8" checked> Capella</li>
+                    <li><input type="checkbox" name="option9" value="9" checked> Chicco</li>
+                    <li><input type="checkbox" name="option10" value="10" checked> Navington</li>
+                    <li><input type="checkbox" name="option11" value="11" checked> Peg Perego (Пег Перего)</li>
                   </ul>
                 </div>
               </div>
@@ -512,47 +512,6 @@
               <div class="characteristic">
                 <div class="blank_title">
                   <p>Характеристики</p>
-                  ul>
-                  <li>
-                    <i class="lol"></i><span>Механизм складывания</span>
-                    <ul class="child">
-                      <li>Трость</li>
-                      <li>Механический</li>
-                      <li>Отсутствует</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Количество колес</span>
-                    <ul class="child">
-                      <li>4</li>
-                      <li>6</li>
-                      <li>8</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Колеса</span>
-                    <ul class="child">
-                      <li>Резиновые</li>
-                      <li>Пластиковые</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Максимальный возраст</span>
-                    <ul class="child">
-                      <li>до 3 лет</li>
-                      <li>до 6 лет</li>
-                      <li>до 12 лет</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Цвет</span>
-                    <ul class="child">
-                      <li>Красный</li>
-                      <li>Зеленый</li>
-                      <li>Синий</li>
-                    </ul>
-                  </li>
-                </ul>
               </div>
             </div>
           </div>
@@ -560,96 +519,7 @@
             <div class="catalog">
               <div class="blank_title">
                 <p>Каталог</p>
-                <ul>
-                  <li>
-                    <i class="lol"></i><span>Коляски</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Мебель и матрасы</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Автокресла</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Развитие</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Зимние товары</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Одежда и обувь для малышей</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Одежда для беременных</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Товары по сниженным ценам</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Гигиена</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Активные игры</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <i class="lol"></i><span>Товары для мам и малышей, электроника</span>
-                    <ul class="child">
-                      <li>zxc</li>
-                      <li>zxc</li>
-                      <li>zxc</li>
-                    </ul>
-                  </li>
-                </ul>
+
               </div>
             </div>
           </div>
