--- a/kolyaski.html
+++ b/kolyaski.html
@@ -6,7 +6,7 @@
   <title>Торговый дом "2 Гуся"</title>
   <link rel="stylesheet" href="fonts/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/jquery-ui.min.css">
+  <!-- <link rel="stylesheet" href="css/jquery-ui.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -558,6 +558,9 @@
     </div>
   </div>
 </footer>
+
+<script src="js/jquery-3.5.0.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
