--- a/kolyaski.html
+++ b/kolyaski.html
@@ -467,6 +467,7 @@
               <div class="filter">
                 <div class="blank_title">
                   <p>Цена, руб.</p>
+                  <p>я бы доделал, но времени ноль</p>
                 </div>
               </div>
             </div>
@@ -509,58 +510,149 @@
               </div>
             </div>
             <div class="blank">
-              <div class="characteristic">
-                <div class="blank_title">
-                  <p>Характеристики</p>
+              <div class="characteristic filter blank_title">
+                <p>Характеристики</p>
+                <ul>
+                  <li class="parent"></li>
+                  <li class="parent">Механизм складывания
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li class="parent">Количество колес
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li class="parent">Колеса
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li class="parent">Максимальный возраст
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                  <li class="parent">Цвет
+                    <ul class="child">
+                      <li>zxc</li>
+                      <li>zxc</li>
+                    </ul>
+                  </li>
+                </ul>
               </div>
             </div>
-          </div>
-          <div class="blank">
-            <div class="catalog">
-              <div class="blank_title">
+            <div class="blank">
+              <div class="catalog filter blank_title">
                 <p>Каталог</p>
-
+                <ul>
+                  <li class="parent"></li>
+                  <li class="parent">Мебель и матрасы
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Коляски
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Мебель и матрасы
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Автокресла
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Развитие
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Зимние товары
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Одежда и обувь для малышей
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Одежда для беременных
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Товары по сниженным ценам
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Гигиена
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Активные игры
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                  <li class="parent">Товары для мам и малышей, электроника
+                  <ul class="child">
+                    <li><a href="#">zxc</a></li>
+                    <li><a href="#">zxc</a></li>
+                  </ul></li>
+                </ul>
               </div>
             </div>
+            <div class="reklama">
+              <a href="#">
+                <img src="img/main_reklama.png" alt="main_reklama">
+              </a>
+            </div>
           </div>
-          <div class="reklama">
-            <a href="#">
-              <img src="img/main_reklama.png" alt="main_reklama">
-            </a>
-          </div>
-        </div>
-      </div> <!--боковое меню-->
+        </div> <!--боковое меню-->
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="row justify-content-center">
-          <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
-          <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
-          <div class="col-5 col-md-3 foot ">
-            <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
-            <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
-          </div>
-          <div class="col-5 col-md-3 foot  logo_footer">
-            <div><img src="img/logo_footer.png" alt="logo_footer"></div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+            <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
+            <div class="col-5 col-md-3 foot ">
+              <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
+            </div>
+            <div class="col-5 col-md-3 foot  logo_footer">
+              <div><img src="img/logo_footer.png" alt="logo_footer"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<script src="js/jquery-3.5.0.min.js"></script>
-<script src="js/main.js"></script>
+  <script src="js/jquery-3.5.0.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
